<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/top_gradient"
        android:orientation="horizontal" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lobster"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                android:visibility="visible"
                android:text="@string/quizzo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:text="SIGN UP TO PLAY"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/form_username"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/form_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />


            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/form_phone"
                android:inputType="phone"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />


            <EditText
                android:id="@+id/pword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/form_password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_round"
                android:text="Sign Up"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/already_signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="0dp"
                android:text="@string/already_member"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:clickable="true"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>